package eng.jAtcSim.newLib.textProcessing;

public interface IWithHelp {
  String getHelp();
  String getHelp(Object input);
}
