package eng.jAtcSim.newLib.textProcessing.parsing.shortcuts;

public interface IWithShortcuts<T> {
  ShortcutList<T> getShortcuts();
}
